@@ -13,18 +13,8 @@ tasks.test.getInputs().dir('../../doc')
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(20)
+        languageVersion = JavaLanguageVersion.of(21)
     }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test).configureEach {
-    jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += "--enable-preview"
 }
 
 // JunitTest needs access to junit4 jar and its dependencies.
